# gemini-movie-detectives-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
gemini_movie_detectives_api/: cleanup.py  config.py  gemini.py  imagen.py  main.py  model.py  prompt.py  speech.py  storage.py  template.py  tmdb.py  wiki.py
gemini_movie_detectives_api/data/: franchises.txt
gemini_movie_detectives_api/quiz/: base.py  bttf_trivia.py  sequel_salad.py  title_detectives.py  trivia.py
gemini_movie_detectives_api/templates/: metadata.jinja  prompt_answer.jinja  prompt_question.jinja
gemini_movie_detectives_api/templates/bttf-trivia/: prompt_answer.jinja  prompt_question.jinja
gemini_movie_detectives_api/templates/language/: de.jinja  en.jinja
gemini_movie_detectives_api/templates/personality/: christmas.jinja  dad.jinja  default.jinja  scientist.jinja
gemini_movie_detectives_api/templates/sequel-salad/: prompt_answer.jinja  prompt_question.jinja
gemini_movie_detectives_api/templates/title-detectives/: prompt_question.jinja
gemini_movie_detectives_api/templates/trivia/: prompt_question.jinja
tests/: test_bttf_trivia.py  test_gemini.py  test_prompt.py  test_sequel_salad.py  test_title_detectives.py  test_trivia.py
